LF-4079 Fix behaviour on mobile

--- a/packages/webapp/src/components/HoverPill/styles.module.scss
+++ b/packages/webapp/src/components/HoverPill/styles.module.scss
@@ -15,6 +15,7 @@
 
 .pillText,
 .detailText {
+  user-select: none;
   font-family: 'Open Sans';
   font-size: 14px;
   line-height: normal;
@@ -23,6 +24,7 @@
 
 .pill {
   cursor: default;
+  user-select: none;
   display: inline-flex;
   padding: 2px 8px;
   justify-content: center;
